# guided-energy-case-study

./: .gitignore  Dockerfile  flake.nix  pyproject.toml  readme.md  run-docker.sh  test_request.py  test_response.json
back/: cli.py  config.py  google_calendar.py  prompts.py  weather.py  workflow.py
tests/long/: readme.md  test_chat_init_missing_context.py  test_chat_tool_call_get_weather.py
