[project]
name = "weather"
version = "0.1.0"
description = "Weather CLI using Anthropic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.55.0",
    "click>=8.1.7",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
    "pyright>=1.1.401",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = ["E501"]  # Ignore line too long

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
